--- a/gui/gui.csproj
+++ b/gui/gui.csproj
@@ -48,6 +48,10 @@
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.3\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <HintPath>..\packages\MySql.Data.6.9.9\lib\net45\MySql.Data.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -66,6 +70,8 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Form_Test.aspx" />
+    <Content Include="New_WorkShop_Form.aspx" />
     <Content Include="New_Volunteer_Form.aspx" />
     <Content Include="packages.config" />
     <Content Include="css\bootstrap-theme.css.map" />
@@ -99,6 +105,21 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DB.cs" />
+    <Compile Include="Form_Test.aspx.cs">
+      <DependentUpon>Form_Test.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Form_Test.aspx.designer.cs">
+      <DependentUpon>Form_Test.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="New_WorkShop_Form.aspx.cs">
+      <DependentUpon>New_WorkShop_Form.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="New_WorkShop_Form.aspx.designer.cs">
+      <DependentUpon>New_WorkShop_Form.aspx</DependentUpon>
+    </Compile>
     <Compile Include="New_Volunteer_Form.aspx.cs">
       <DependentUpon>New_Volunteer_Form.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -124,6 +145,7 @@
     <Compile Include="Site.Master.designer.cs">
       <DependentUpon>Site.Master</DependentUpon>
     </Compile>
+    <Compile Include="Volunteer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
