--- a/gui/gui.csproj
+++ b/gui/gui.csproj
@@ -70,9 +70,10 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Form_Test.aspx" />
-    <Content Include="New_WorkShop_Form.aspx" />
-    <Content Include="New_Volunteer_Form.aspx" />
+    <Content Include="css\bootstrap-rtl.min.css" />
+    <Content Include="Gui\New_WorkShop_Form.aspx" />
+    <Content Include="Gui\New_Volunteer_Form.aspx" />
+    <Content Include="js\jquery-3.2.1.min.js" />
     <Content Include="packages.config" />
     <Content Include="css\bootstrap-theme.css.map" />
     <Content Include="css\bootstrap-theme.min.css.map" />
@@ -83,6 +84,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="Site.Master" />
+    <Content Include="css\bootstrap-rtl.css.map" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -105,26 +107,19 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DB.cs" />
-    <Compile Include="Form_Test.aspx.cs">
-      <DependentUpon>Form_Test.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Form_Test.aspx.designer.cs">
-      <DependentUpon>Form_Test.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="New_WorkShop_Form.aspx.cs">
+    <Compile Include="Models\DB.cs" />
+    <Compile Include="Gui\New_WorkShop_Form.aspx.cs">
       <DependentUpon>New_WorkShop_Form.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="New_WorkShop_Form.aspx.designer.cs">
+    <Compile Include="Gui\New_WorkShop_Form.aspx.designer.cs">
       <DependentUpon>New_WorkShop_Form.aspx</DependentUpon>
     </Compile>
-    <Compile Include="New_Volunteer_Form.aspx.cs">
+    <Compile Include="Gui\New_Volunteer_Form.aspx.cs">
       <DependentUpon>New_Volunteer_Form.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="New_Volunteer_Form.aspx.designer.cs">
+    <Compile Include="Gui\New_Volunteer_Form.aspx.designer.cs">
       <DependentUpon>New_Volunteer_Form.aspx</DependentUpon>
     </Compile>
     <Compile Include="Default.aspx.cs">
@@ -137,6 +132,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Volunteer.cs" />
+    <Compile Include="Models\Workshop.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
@@ -145,11 +142,9 @@
     <Compile Include="Site.Master.designer.cs">
       <DependentUpon>Site.Master</DependentUpon>
     </Compile>
-    <Compile Include="Volunteer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
